# webperf-mcp

./: .env.example  .gitignore  .mcpbignore  README.md  manifest.json  pyproject.toml
src/webperf_mcp/: __init__.py  server.py
